fixed scrollbars and read indicators

--- a/public/main.css
+++ b/public/main.css
@@ -23,11 +23,13 @@
     --online-users-width: calc(60px + var(--border-thickness));
     --bottom-height: 100px;
     --max-message-width: 500px;
+    --panel-title-height: 70px;
+    --item-block-height: 60px;
 }
 html {
     font-family: Arial, serif;
 }
-#messages, .replyBarText, .panelList, #messageInput {
+* {
     scrollbar-width: thin;
 }
 #app {
@@ -124,8 +126,10 @@ button:hover {
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
-    height: 60px;
+    height: var(--item-block-height);
+    min-height: var(--item-block-height);
     padding: var(--profile-pic-margin);
+
 }
 #currentlyOnlineUsersPanel {
     width: var(--online-users-width);
@@ -179,8 +183,8 @@ button:hover {
 }
 
 .panelTitle {
-    height: 70px;
-    line-height: 70px;
+    height: var(--panel-title-height);
+    line-height: var(--panel-title-height);
     text-align: center;
     vertical-align: middle;
     font-size: 16px;
@@ -200,6 +204,7 @@ button:hover {
     display: flex;
     border-right: var(--border) var(--main-color);
     flex-direction: column;
+    max-height: calc(100% - var(--panel-title-height) - var(--border-thickness))
 }
 .messageDiv {
     width: 100%;
@@ -266,12 +271,14 @@ button:hover {
     bottom: -10px;
     display: flex;
     z-index: 10;
-    left: 0;
     max-width: var(--max-message-width)
 }
 .readIndicators.myText {
     right: 0;
     flex-direction: row-reverse;
+}
+.readIndicators.notMyText {
+    left: 0;
 }
 .readIndicatorsProfilePic.notMyText {
     margin: 0 0 0 3px;
@@ -394,6 +401,7 @@ canvas {
     flex-direction: column;
     border: var(--border) var(--accent-color);
     background-color: var(--modal-color);
+    z-index: 15;
 }
 .userPopupButton {
     background-color: var(--button-background-color);
@@ -401,19 +409,15 @@ canvas {
 .userPopupButton:hover {
     background-color: var(--button-background-hover-color);
 }
-
-.fullScreenOverlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: var(--modal-background-color);
-    z-index: 50;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 #mainSettingsPanel {
     width: 600px;
     height: 400px;
     background-color: var(--modal-color);
+    display: flex;
+}
+
+#settingsLeftPanel {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
 }
